# deepSURF

./: .gitignore  LICENSE  README.md  fuzz-algo.sh  generate_harnesses.sh
code/harness_generator/: Cargo.toml
code/harness_generator/src/: main.rs  type_converters.rs
code/rust/compiler/rustc_surf/: Cargo.toml
code/rust/compiler/rustc_surf/src/: lib.rs
dataset/rug_crates/itoa-1.0.6/: Cargo.toml
dataset/rug_crates/itoa-1.0.6/src/: lib.rs  udiv128.rs
dataset/rug_crates/ryu-1.0.13/: Cargo.toml
dataset/rug_crates/ryu-1.0.13/src/: common.rs  d2s.rs  d2s_intrinsics.rs  f2s.rs  f2s_intrinsics.rs  lib.rs
dataset/rug_crates/ryu-1.0.13/src/buffer/: mod.rs
dataset/rug_crates/ryu-1.0.13/src/pretty/: exponent.rs  mantissa.rs  mod.rs
rqs/rq1/bug#22-qwutils/harness/: Cargo.toml
rqs/rq1/bug#23-endian_trait/harness/: Cargo.toml
rqs/rq1/bug#23-endian_trait/harness/src/: endian_trait_fuzz_7198618591775168066.rs
rqs/rq1/bug#24-pnet_packet/harness/: Cargo.toml
rqs/rq1/bug#25-rdiff/harness/: Cargo.toml
rqs/rq1/bug#27-smallvec-0.6.1/harness/: Cargo.toml
rqs/rq1/bug#27-smallvec-0.6.1/harness/src/: smallvec_fuzz_18392879595282618936.rs
rqs/rq1/bug#28-slice-deque-0.1.15/harness/: Cargo.toml
rqs/rq1/bug#28-slice-deque-0.1.15/harness/src/: slice-deque_fuzz_3903909633575400926.rs
rqs/rq1/bug#29-smallvec-0.6.3/harness/: Cargo.toml
rqs/rq1/bug#29-smallvec-0.6.3/harness/src/: smallvec_fuzz_2942584205497819784.rs
rqs/rq1/bug#31-sized-chunks/harness/: Cargo.toml
rqs/rq1/bug#32-bumpalo-3.2.0/harness/: Cargo.toml
rqs/rq1/bug#32-bumpalo-3.2.0/harness/src/: bumpalo_fuzz_73242652636878448.rs
rqs/rq1/bug#34-array-queue/harness/: Cargo.toml
rqs/rq1/bug#35-scratchpad/harness/: Cargo.toml
rqs/rq1/bug#35-scratchpad/harness/src/: scratchpad_fuzz_10065014139744667447.rs
rqs/rq1/bug#36-arenavec/harness/: Cargo.toml
rqs/rq1/bug#36-arenavec/harness/src/: arenavec_fuzz_14164823723381308391.rs
rqs/rq1/bug#37-arenavec/harness/: Cargo.toml
rqs/rq1/bug#37-arenavec/harness/src/: arenavec_fuzz_3386935091047480328.rs
rqs/rq1/bug#38-arenavec/harness/: Cargo.toml
rqs/rq1/bug#38-arenavec/harness/src/: arenavec_fuzz_10473694077003418768.rs
rqs/rq1/bug#39-id-map/harness/: Cargo.toml
rqs/rq1/bug#39-id-map/harness/src/: id-map_fuzz_12571356421695713594.rs
rqs/rq1/bug#40-id-map/harness/: Cargo.toml
rqs/rq1/bug#40-id-map/harness/src/: id-map_fuzz_6180106901188358320.rs
rqs/rq1/bug#42-leapfrog/harness/: Cargo.toml
rqs/rq1/bug#42-leapfrog/harness/src/: leapfrog_fuzz_9596873930702142430.rs
rqs/rq1/bug#8-slice_deque-0.3.0/harness/: Cargo.toml
rqs/rq1/bug#8-slice_deque-0.3.0/harness/src/: slice-deque_fuzz_14000630316968299981.rs
rqs/rq1/bug#9-slice_deque-0.3.0/harness/: Cargo.toml
rqs/rq1/bug#9-slice_deque-0.3.0/harness/src/: slice-deque_fuzz_13747329227113053133.rs
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/: Cargo.toml  algorithmica.json  algorithmica.md  algorithmica.out.txt  algorithmica_fuzz_trans.json  fuzz_log.txt
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_1/test_rug/: init22
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_12/test_rug/: init10
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_14/test_rug/: init11
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_17/test_quick_sort/: init19
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_19/test_rug/: init16
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_2/test_rug/: init23
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_21/test_rug/: init20
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_27/test_rug/: init8
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_3/test_rug/: init1
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_30/test_rug/: init3
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/inputs/tests_rug_7/test_rug/: init15
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/src/: subset.rs
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/src/math/: matrix.rs
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/src/search/: binary.rs
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/src/sort/: bubble.rs  insertion.rs  is_sorted.rs  merge_sort.rs  quick_sort.rs  selection.rs
rqs/rq2/RUG/harnesses/algorithmica-0.1.8/src/tree/: bst.rs  mod.rs
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/: Cargo.toml  arc-swap.json  arc-swap.md  arc-swap.out.txt  arc-swap_fuzz_trans.json  fuzz_log.txt
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/inputs/tests_rug_20/test_rug/: init6
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/inputs/tests_rug_34/test_store/: init9
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/inputs/tests_rug_35/test_rug/: init10
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/inputs/tests_rug_37/test_rug/: init11
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/inputs/tests_rug_9/test_rug/: init12
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/inputs/tests_rug_93/test_rug/: init21
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/src/: access.rs  debt.rs  gen_lock.rs  lib.rs  ref_cnt.rs
rqs/rq2/RUG/harnesses/arc-swap-1.0.0/src/strategy/: rw_lock.rs
rqs/rq2/RUG/harnesses/bumpalo-3.11.0/: .cargo_vcs_info.json  API_DOCS.md  Cargo.toml  bumpalo.json  bumpalo.out.txt  bumpalo_fuzz_trans.json  fuzz_log.txt
rqs/rq2/RUG/harnesses/bumpalo-3.11.0/inputs/tests_rug_17/test_repeat/: init8
rqs/rq2/RUG/harnesses/bumpalo-3.11.0/src/: alloc.rs  lib.rs
rqs/rq2/RUG/harnesses/cbox-0.3.0/: Cargo.toml  api_docs.md  cbox.json  cbox.out.txt  cbox_fuzz_trans.json  fuzz_log.txt
rqs/rq2/RUG/harnesses/cbox-0.3.0/src/: lib.rs
rqs/rq2/RUG/harnesses/endian_trait-0.6.0/: Cargo.toml  endian_trait.json  endian_trait.out.txt  endian_trait_fuzz_trans.json  fuzz_log.txt
rqs/rq2/RUG/harnesses/endian_trait-0.6.0/src/: lib.rs  slices.rs
rqs/rq2/RUG/harnesses/fuzz_transform/: Cargo.toml  fuzz_transform.json  fuzz_transform.out.txt  fuzz_transform.py  fuzz_transform_fuzz_trans.json
rqs/rq2/RUG/harnesses/fuzz_transform/src/: main.rs
rqs/rq2/RUG/harnesses/nano_arena-0.5.2/: Cargo.toml  fuzz_log.txt  nano_arena.json  nano_arena.out.txt  nano_arena_fuzz_trans.json
rqs/rq2/RUG/harnesses/nano_arena-0.5.2/src/: lib.rs
(+5235 files in other folders)
