[package]
name = "harness_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "*"
petgraph = "*"
serde = { version = "=1.0.209", features = ["derive"] }
serde_json = "=1.0.127"
rayon = "*"
itertools = "*"
rand = { version = "0.8.5", features = ["alloc"] }
toml = "=0.8.19"
walkdir = "*"
openai-api-rs = "5.2.6"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
regex = "*"
fs_extra = "1.3.0"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
chrono="*"
idna_adapter="=1.2.0"
serde_spanned="=0.6.8"