[package]
name = "itoa"
version = "1.0.6"
authors = [ "David Tolnay <dtolnay@gmail.com>",]
categories = [ "value-formatting", "no-std",]
description = "Fast integer primitive to string conversion"
documentation = "https://docs.rs/itoa"
edition = "2018"
exclude = [ "performance.png", "chart/**",]
keywords = [ "integer",]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/itoa"
rust-version = "1.36"

[dependencies]
#bolero = "0.8.0"
bumpalo = "3.12.0"

[lib]
doc-scrape-examples = false

[dependencies.no-panic]
version = "0.1"
optional = true

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu",]
