[package]
name = "rustc_surf"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.59"

lazy_static = "*"
petgraph = "*"
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_hir = { path = "../rustc_hir" }
rustc_span = { path = "../rustc_span" }
rustc_middle = { path = "../rustc_middle" }
toml = "*"
regex = "*"
