[workspace]

[package]
name = "qwutils_fuzz_3863007537564520346"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qwutils_fuzz_3863007537564520346"
path = "src/qwutils_fuzz_3863007537564520346.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
qwutils = { path = "../../../../dataset/erasan_crates/qwutils-0.3.0" }
global_data = { path = "../../../../code/global_data" }