[workspace]

[package]
name = "endian_trait_fuzz_7198618591775168066"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "endian_trait_fuzz_7198618591775168066"
path = "src/endian_trait_fuzz_7198618591775168066.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
endian_trait = { path = "../../../../dataset/erasan_crates/endian_trait-0.6.0" }
global_data = { path = "../../../../code/global_data" }