[workspace]

[package]
name = "rdiff_fuzz_7378658651567291026"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rdiff_fuzz_7378658651567291026"
path = "src/rdiff_fuzz_7378658651567291026.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
rdiff = { path = "../../../../dataset/erasan_crates/rdiff-0.1.2" }
global_data = { path = "../../../../code/global_data" }