[workspace]

[package]
name = "smallvec_fuzz_18392879595282618936"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smallvec_fuzz_18392879595282618936"
path = "src/smallvec_fuzz_18392879595282618936.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
global_data = { path = "../../../../code/global_data" }
smallvec = { path = "../../../../dataset/rustsan_crates/smallvec-0.6.1" }