[workspace]

[package]
name = "smallvec_fuzz_2942584205497819784"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "smallvec_fuzz_2942584205497819784"
path = "src/smallvec_fuzz_2942584205497819784.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
global_data = { path = "../../../../code/global_data" }
smallvec = { path = "../../../../dataset/rustsan_crates/smallvec-0.6.3" }