[workspace]

[package]
name = "scratchpad_fuzz_10065014139744667447"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scratchpad_fuzz_10065014139744667447"
path = "src/scratchpad_fuzz_10065014139744667447.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
global_data = { path = "../../../../code/global_data" }
scratchpad = { path = "../../../../dataset/rustsan_crates/scratchpad-1.3.0" }