[workspace]

[package]
name = "arenavec_fuzz_14164823723381308391"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arenavec_fuzz_14164823723381308391"
path = "src/arenavec_fuzz_14164823723381308391.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
global_data = { path = "../../../../code/global_data" }
arenavec = { path = "../../../../dataset/rustsan_crates/arenavec-0.1.1" }