[workspace]

[package]
name = "slice-deque_fuzz_13747329227113053133"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slice-deque_fuzz_13747329227113053133"
path = "src/slice-deque_fuzz_13747329227113053133.rs"

[dependencies]
afl = "=0.15.7"
home = "=0.5.9"
slice-deque = { path = "../../../../dataset/erasan_crates/slice-deque-0.3.0" }
global_data = { path = "../../../../code/global_data" }