[[bench]]
name = "background"
harness = false

[[bench]]
name = "int-access"
harness = false

[[bench]]
name = "track"
harness = false

[package]
name = "arc-swap"
version = "1.0.0"
authors = [ "Michal 'vorner' Vaner <vorner@vorner.cz>",]
description = "Atomically swappable Arc"
documentation = "https://docs.rs/arc-swap"
repository = "https://github.com/vorner/arc-swap"
readme = "README.md"
keywords = [ "atomic", "Arc",]
categories = [ "data-structures", "memory-management",]
license = "Apache-2.0/MIT"
edition = "2018"

[features]
experimental-strategies = []
weak = []

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[dev-dependencies]
criterion = "~0.3"
crossbeam-utils = "~0.7"
itertools = "~0.9"
num_cpus = "~1"
once_cell = "~1"
parking_lot = "~0.11"
proptest = "~0.10"

[badges.travis-ci]
repository = "vorner/arc-swap"

[badges.appveyor]
repository = "vorner/arc-swap"

[badges.maintenance]
status = "actively-developed"

[profile.bench]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
