[package]
exclude = [ ".gitignore", ".travis.yml",]
authors = [ "Tom Bebbington <tophattedcoder@gmail.com>",]
description = "C pointer boxing, for when working with ffi"
documentation = "https://tombebbington.github.io/llvm-rs/llvm/index.html"
keywords = [ "ffi", "bindings", "utility",]
license = "MIT"
name = "cbox"
readme = "README.md"
repository = "https://github.com/TomBebbington/cbox-rs"
version = "0.3.0"

[dependencies]
libc = "*"
bolero = "0.8.0"
arbitrary = "1.3.2"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
