[package]
name = "endian_trait"
version = "0.6.0"
authors = [ "myrrlyn <myrrlyn@outlook.com>",]
exclude = [ "Justfile",]
description = "A trait for Endianness conversions that can be implemented on most types"
readme = "README.md"
keywords = [ "endian",]
license = "MIT"
repository = "https://gitlab.com/myrrlyn/endian_trait"

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[features]
arrays = []

[dependencies.endian_trait_derive]
version = "0.6.0"

[badges.gitlab]
branch = "master"
repository = "myrrlyn/endian_trait"

[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
branch = "master"
repository = "myrrlyn/endian_trait"

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1
