[package]
name = "fuzz_transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.109", features = ["full", "visit", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
prettyplease = "0.1.25"
