[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[package]
edition = "2018"
name = "nano_arena"
version = "0.5.2"
authors = [ "Bennett Hardwick <me@bennetthardwick.com>",]
description = "A tiny arena allocator that uses atomics"
license = "MIT"

[dependencies]
bolero = "0.8.0"
arbitrary = "1.3.2"

[profile.bench]
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 1
incremental = false
codegen-units = 1

[dev-dependencies.criterion]
version = "0.3.2"

[badges.travis-ci]
repository = "https://github.com/bennetthardwick/nano-arena"
